@@ -1,3 +1,5 @@
+* Exclude deferral period on FEC
+* Use configuration for FEC opening move
 * Remove support for Python 2.7
 
 Version 4.8.0 - 2018-04-23
